kubernetes/apps/storage/harbor/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor
  namespace: storage
  labels:
    route.scope: external
  annotations:
    external-dns.alpha.kubernetes.io/target: external.vaderrp.com
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |
      group: Storage
      url: "https://harbor.vaderrp.com/api/v2.0/health"
      conditions:
        - "[STATUS] == 200"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-public
      namespace: network
  hostnames:
    - harbor.vaderrp.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: harbor
          port: 80
